fix: overlapping card category label

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@theme {
+    --breakpoint-xs: 40em;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 /* Global variables */
